--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+}
+
+.Container {
+  background-image: url('./components/styles/fryepic.jpg');
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
