--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -3,5 +3,6 @@
     bottom: 0;
     width: 100%;
     height: 2.5rem;
-    color: grey;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
 }
