--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,15 @@
 h1 {
   color: white;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 60px;
+}
+
+h2{
+  color: white;
+}
+
+p {
+  font-size: 18px;
 }
 
 input[type="text"] {
